reference/tests/snapshots/snapshot__run_reference_examples@s-strings-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/s-strings-0.prql
---
SELECT
  version() AS db_version
FROM
  x
