reference/tests/snapshots/snapshot__run_reference_examples@sql-parameters-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/examples/sql-parameters-0.prql
---
SELECT
  mytable.*
FROM
  mytable
WHERE
  id = $1
