reference/tests/snapshots/snapshot__run_reference_examples@strings-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/strings-0.prql
---
SELECT
  'hello world' AS x
