reference/tests/snapshots/snapshot__run_reference_examples@strings-3.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/strings-3.prql
---
SELECT
  'I said "hello world"!' AS x
