reference/tests/snapshots/snapshot__run_reference_examples@syntax-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/syntax-0.prql
---
SELECT
  tbl.*
FROM
  tbl
