reference/tests/snapshots/snapshot__run_reference_examples@transforms-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms-1.prql
---
SELECT
  first_name,
  last_name
FROM
  employees
