reference/tests/snapshots/snapshot__run_reference_examples@transforms-10.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms-10.prql
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
